--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.holenet.cowinfo">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +23,8 @@
         </activity>
         <activity
             android:name=".SignInActivity"
-            android:label="로그인"/>
+            android:label="로그인" />
+        <activity android:name=".EditCowActivity"></activity>
     </application>
 
 </manifest>
