configure activity_edit_cow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity
             android:name=".SignInActivity"
             android:label="로그인" />
-        <activity android:name=".EditCowActivity"></activity>
+        <activity
+            android:name=".EditCowActivity"
+            android:label="개체 정보 수정"/>
     </application>
 
 </manifest>
