--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,10 @@ android {
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "0.9.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        setProperty("archivesBaseName", "cowinfo-$versionName")
     }
     buildTypes {
         release {
